This file documents the revision history for the Monitoring Webinterface Thruk.

next:
          - fix glitch in column drag/drop

2.12     Fri Nov 18 10:14:00 CET 2016
          - remove startup page, Thruk starts in less than a second now
          - add adjustable status details columns / dynamic views
          - add default_service_columns and default_host_columns config options
          - Performance improvements on the host/service list page
          - allow arbitrary html in the side navigation
          - fix merging configuration from thruk_local.d
          - fix session logout problem when there is a syntax error in menu_local.conf
          - Panorama View:
            - list already used colors in color picker
            - add support for svg vector graphics as background/static/status images
            - fix display error in speedometer with overlaping thresholds
            - fix js error in shape dropdown
            - fix error when using umlauts in dashboard title
          - Business Process:
            - add icinga2 support
            - fix regular expression in service state nodes
          - Reports:
            - add outage report
          - Logcache:
            - add logcache_import_command option
            - add logcache_delta_updates option

2.10-2   Mon Oct  3 20:43:02 CEST 2016
          - mark disabled eventhandler red on process info page
          - add lmd support
          - get uid/groups with POSIX:getgroups if possible (mickenordin #634)
          - fix xss issue on login page
          - Panorama View:
            - increase popups delay to 1second
            - fix popups showing when mouse moved over a icon
            - fix start page not found when using OMD
          - Mobile:
            - fix sending reschedule command

2.10     Wed Aug 24 14:59:03 CEST 2016
          - add useragentcompat option for IE compatibility mode (ofosos #626)
          - support reading action_menu_items from file/folder