@@ -2,6 +2,7 @@ This file documents the revision history for the Monitoring Webinterface Thruk.
 
 next:
           - fix glitch in column drag/drop
+          - fix missing jquery in mobile view (#653)
 
 2.12     Fri Nov 18 10:14:00 CET 2016
           - remove startup page, Thruk starts in less than a second now
